--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,7 @@ textarea {
 html {
 	background: #202322;
 	color: #e2e3ed;
+	font-family: 'Open Sans', sans-serif;
 }
 
 body {
@@ -127,6 +128,11 @@ header nav {
 header nav ul {
 	display: flex;
 	justify-content: space-around;
+}
+
+h3 {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 700;
 }
 
 /* ------------------ Mobile Styles | Homepage ------------------ */
