--- a/css/main.css
+++ b/css/main.css
@@ -112,16 +112,11 @@ header .content-wrapper{
 	margin: 0;
 }
 
-header figure {
-	
-}
-
 .header-divider {
     color: #e2e3ed;
 	width: 100%;
-    height: 2px;
-    margin: 10px 0 20px 0;
-	
+    height: 1px;
+    margin: 10px 0 20px 0;	
 }
 
 header nav {
@@ -337,6 +332,10 @@ aside h3 {
 .contact-section address {
 	font-style: normal;
 }
+
+.contact-content p {
+	margin: 0;
+}
 /* ==================================================
                         FAQ PAGE
    ================================================== */
@@ -347,11 +346,22 @@ aside h3 {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-	padding: 25px 0 35px;
 }
 
-.faq article {
-	margin: 45px 0 0;
+.faq .content-wrapper {
+	margin: 50px 0 0 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
+}
+
+.faq h2 {
+	margin-bottom: 40px;
+}
+
+.faq-content {
+	margin-bottom: 50px;
 }
 
 
@@ -443,9 +453,147 @@ aside h3 {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+/******************Tablet styles here/******************/
+	.content-wrapper {
+		max-width: 640px;
+		margin: 100px 0;
+	}
+	
+	/* Header */
+	header {
+		justify-content: space-around;
+		padding: 33px 0;
+	}
+	
+	header .content-wrapper {
+		width: 100%;
+		justify-content: space-between;
+	}
+	
+	header nav {
+		width: 20%;
+	}
+	
+	header nav ul {
+		justify-content:space-between;		
+	}
+	
+	.header-divider {
+		display: none;
+	}
+	
+	/* Hero Area */
+	
+	/* Aside */
+	aside .content-wrapper {
+		margin: 50px 0;
+		display: flex;
+		justify-content: space-between;
+		flex-flow: row wrap;
+	}
+		
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+        width: 40%;
+        margin: 0;   
+	}
+	
+	/* Features */
+	.features article {
+	align-items: baseline;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	flex-basis: 50%;	
 }
+	
+	.features .features-item-description {
+		width: 50%;		
+	}
+		
+	.features-items {
+        align-items: baseline;	
+    }
+	
+	/* Reviews */	
+	.review article {
+		display: flex;
+		justify-content: space-between;
+	}
+	
+	.reviews article div {
+		width: 49%;
+	}
+	
+	/* Footer */
+	footer .content-wrapper {
+		width: 65%;
+		margin: 100px 0;
+	}
+	
+	.footer-content {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	
+	}
+	
+	footer .contact {
+		margin-bottom: 0;
+	}
+	
+	footer .copyright {
+		width: 100%;
+	}
+    /* ==========================================================================
+     About Page
+     ========================================================================== */
+	.mission-content {
+		display: flex;
+		justify-content:  space-between;
+		align-items: center;
+		padding-top: 20px;
+	}
+	.mission-content p {
+		width: 45%;		
+	}
+	
+	.mission h2 {
+		width: 100%;
+	}
+	.contact-section .content-wrapper h2 {
+		width: 80%;
+	}
+	.contact-content {
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+    /* ==========================================================================
+     FAQ Page
+     ========================================================================== */
+	
+	.faq .content-wrapper {
+		justify-content: space-between;
+	}
+	.faq-content {
+		flex-basis: 45%;
+	}
+	.faq h2 {
+		width: 100%
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+/******************Desktop styles here/******************/
+	.features article {
+	width: 20%;
+	margin: 50px 0;	
+    }
+}
+
+
 
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
