--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ html {
 	background: #202322;
 	color: #e2e3ed;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
+	font-size: 16px;
 	margin:0;
 }
 
@@ -94,8 +94,12 @@ header, footer {
 	align-items: center;
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: center;
-	
+	justify-content: center;	
+}
+
+.content-wrapper {
+	width: 90%;
+	margin: 50px 0;
 }
 
 /************************** Header Styles **************************/
@@ -114,9 +118,9 @@ header .content-wrapper{
 
 .header-divider {
     color: #e2e3ed;
-	width: 100%;
     height: 1px;
-    margin: 10px 0 20px 0;	
+    margin: 10px 0 20px 0;
+	width: 100%;	
 }
 
 header nav {
@@ -130,7 +134,6 @@ header nav {
 header nav ul {
 	display: flex;
 	justify-content: space-around;
-	padding: 0;
 	width: 100%
 }
 
@@ -149,6 +152,7 @@ header nav ul li a {
 
 footer {
 	flex-direction: column;
+	text-align: center;
 }
 
 footer p{
@@ -157,14 +161,13 @@ footer p{
 
 footer .content-wrapper {
 	marging: 50px 0;
-	text-align: center;
 	width: 55%;	
 }
 
 footer .social-icons {
 	align-items: center;
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 }
 
 footer .social-icons p {
@@ -173,16 +176,12 @@ footer .social-icons p {
 	justify-content: center;
 }
 
-footer h3 {
-	margin: 50px 0 20px;
-}
-
 footer address {
 	font-style: normal;
 }
 
-.copyright {
-	margin: 50px 0;
+footer .copyright {
+	margin: 20px 0;
 }
 
 h1 {
@@ -208,16 +207,14 @@ p {
 	line-height: 1.3em;
 }
 
-.content-wrapper {
-	width: 90%;
-}
+
 
 /************************** Hero **************************/
 
 .hero-area {
-	align-items: center;
 	display: flex;
 	justify-content: center;
+	flex-flow: row wrap;
 }
 
 /************************** Sign-up Form **************************/
@@ -227,10 +224,6 @@ aside {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-}
-
-aside h3 {
-	margin-top: 30px;
 }
 
 .form {
@@ -244,27 +237,22 @@ aside h3 {
 /************************** Features Content **************************/
 
 .features {
-	align-items: center;
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-	padding-top: 50px;
 }
 
 
-.features-items {
-	align-items: center;
+.features .features-items {
+	align-items: flex-start;
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-	text-align: center;	
+	text-align: center;
 }
 
 .features h2 {
-	font-family: 'Poppins', sans-serif;
-	font-size: 2.14em;
-	font-weight: 500;
-	margin: 0;
+	margin-bottom: 60px;
 }
 
 .features p {
@@ -272,32 +260,28 @@ aside h3 {
 }
 
 .features article {
-	width: 60%;
-	margin: 50px 0;
-	
+	margin: 30px 0;	
+	width: 63%;
 }
 
-.features-item-description {
-	align-items: center;
-	display: flex;
-	justify-content: center;
-}
+
 
 /************************** Reviews **************************/
+
 .reviews {
-	align-items: center;
 	background: #2a423a;
 	display: flex;
+	flex-flow: row wrap;
 	justify-content: center;
-	padding: 0 0 50px;
 }
 
 .reviews h2 {
-	margin: 55px 0 35px;
+	margin-bottom: 40px;
 }
 
 .reviews h3 {
-	width: 55%
+	margin: 20px 0;
+	width: 55%;
 }
 
 
@@ -305,19 +289,18 @@ aside h3 {
 /* ==================================================
                        ABOUT PAGE
    ================================================== */
+
 .mission {
-	background: #527158;
 	align-items: center;
+	background: #527158;
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-	padding: 50px 0 35px;
 }
 
 .mission h2 {
 	font-family: 'Poppins', sans-serif;
 	font-weight: 500;
-	margin: 0 0 20px;
 }
 
 .contact-section {
@@ -326,7 +309,6 @@ aside h3 {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-	padding: 50px 0 35px;
 }
 
 .contact-section address {
@@ -454,143 +436,222 @@ aside h3 {
    ========================================================================== */
 
 @media only screen and (min-width: 768px) {
-/******************Tablet styles here/******************/
-	.content-wrapper {
-		max-width: 640px;
-		margin: 100px 0;
-	}
+/******************Tablet styles here******************/
+    .content-wrapper {
+        max-width: 640px;
+        margin: 100px 0;
+    }
 	
-	/* Header */
-	header {
-		justify-content: space-around;
-		padding: 33px 0;
-	}
-	
-	header .content-wrapper {
-		width: 100%;
-		justify-content: space-between;
-	}
-	
-	header nav {
-		width: 20%;
-	}
-	
-	header nav ul {
-		justify-content:space-between;		
-	}
-	
-	.header-divider {
-		display: none;
-	}
-	
-	/* Hero Area */
-	
-	/* Aside */
-	aside .content-wrapper {
-		margin: 50px 0;
-		display: flex;
-		justify-content: space-between;
-		flex-flow: row wrap;
-	}
-		
+/* Header */
+    header {
+        justify-content: space-around;
+        padding: 33px 0;
+    }
+
+    header .content-wrapper {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    header nav {
+        width: 30%;
+    }
+
+    header nav ul {
+        justify-content:space-between;		
+    }
+
+    .header-divider {
+        display: none;
+    }
+
+/* Hero Area */
+
+/* Aside */
+    aside .content-wrapper {
+        margin: 50px 0;
+        display: flex;
+        justify-content: space-between;
+        flex-flow: row wrap;
+    }
+
     aside .content-wrapper .form-description,
     aside .content-wrapper .form {
         width: 40%;
         margin: 0;   
-	}
-	
-	/* Features */
-	.features article {
-	align-items: baseline;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	flex-basis: 50%;	
-}
-	
-	.features .features-item-description {
-		width: 50%;		
-	}
-		
-	.features-items {
-        align-items: baseline;	
+    }
+
+/* Features */
+
+    .features article {
+        align-items: baseline;
+        display: flex;
+        flex-flow: row wrap;
+        flex-basis: 50%;
+        justify-content: center;	
+    }
+
+    .features .features-item-description {
+        width: 62%;		
+    }
+
+/* Reviews */
+
+    .review article {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .reviews article div {
+        width: 49%;
+    }
+
+/* Footer */	
+
+    footer .content-wrapper {
+        width: 65%;
+        margin: 100px 0;
+    }
+
+    .footer-content {
+        align-items: baseline;
+        display: flex;
+        justify-content: space-between;	
+    }
+
+    footer .contact, footer .social {
+        margin-bottom: 0;
+        flex-basis: 50%
+    }
+
+    footer .copyright {
+        width: 100%;
     }
 	
-	/* Reviews */	
-	.review article {
-		display: flex;
-		justify-content: space-between;
-	}
 	
-	.reviews article div {
-		width: 49%;
-	}
-	
-	/* Footer */
-	footer .content-wrapper {
-		width: 65%;
-		margin: 100px 0;
-	}
-	
-	.footer-content {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	
-	}
-	
-	footer .contact {
-		margin-bottom: 0;
-	}
-	
-	footer .copyright {
-		width: 100%;
-	}
     /* ==========================================================================
      About Page
      ========================================================================== */
-	.mission-content {
-		display: flex;
-		justify-content:  space-between;
-		align-items: center;
-		padding-top: 20px;
-	}
-	.mission-content p {
-		width: 45%;		
-	}
 	
-	.mission h2 {
-		width: 100%;
-	}
-	.contact-section .content-wrapper h2 {
-		width: 80%;
-	}
-	.contact-content {
-		display: flex;
-		justify-content: space-between;
-		align-items: flex-start;
-	}
+    .mission-content {
+        display: flex;
+        justify-content:  space-between;
+        align-items: center;
+        padding-top: 20px;
+    }
+	
+    .mission-content p {
+        width: 45%;		
+    }
+      
+    .contact-section .content-wrapper h2 {
+        width: 80%;
+    }
+	
+    .contact-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+		
+	
     /* ==========================================================================
      FAQ Page
      ========================================================================== */
 	
-	.faq .content-wrapper {
-		justify-content: space-between;
-	}
-	.faq-content {
-		flex-basis: 45%;
-	}
-	.faq h2 {
-		width: 100%
-	}
+    header {
+		padding: 15px 0;
+    }
+	
+    .faq .content-wrapper {
+        justify-content: space-between;
+    }
+	
+    .faq-content {
+        flex-basis: 45%;
+    }
+	
+    .faq h2 {
+        width: 100%
+    }
 }
 
 @media only screen and (min-width: 1200px) {
 /******************Desktop styles here/******************/
-	.features article {
-	width: 20%;
-	margin: 50px 0;	
+    .content-wrapper {
+        max-width: 960px;
+	}
+	
+	h1 {
+		font-size: 3em;
     }
+	h2 {
+		font-size: 2.15em;
+    }
+	h3 {
+		font-size: 1.4em;
+    }
+	
+	header nav {
+        width: 20%;
+    }
+	
+/* Hero Area */
+	.hero-area h1 {
+		width: 60%;
+	}
+	
+/*Aside */
+	aside .content-wrapper {
+		justify-content: space-around;
+	}
+	
+	aside .content-wrapper .form-description,
+	aside .content-wrapper .form {
+		width: 35%;
+	}
+	
+/* Feature */	
+	.features h2 {
+		width :90%;
+	}
+	
+	.features article {
+        flex-basis: 33%;
+    }
+	
+	.features-items {
+        align-items: baseline;	
+    }	
+	
+	p {
+		line-height: 1.7em;
+	}
+		
+/* Reviews */
+	.reviews article div {
+		width: 42%;
+	}
+	
+/* ==========================================================================
+ About Page
+ ========================================================================== */
+	
+	.mission h2,
+	.contact-section .content-wrapper h2 {
+		width: 95%
+	}
+	
+	
+ /* ==========================================================================
+ FAQ Page
+ ========================================================================== */
+	
+	.faq h2 {
+		width: 100%;
+	}
+	
+    
 }
 
 
