--- a/css/main.css
+++ b/css/main.css
@@ -83,18 +83,55 @@ textarea {
    ========================================================================== */
 /************************** Header, Footer, Base Styles **************************/
 html {
-	background: #202322;
-	color: #e2e3ed;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 16px;
-	margin:0;
+	color: #222;
+	font-size: 1em;
+	line-height: 1.4;
 }
 
-header, footer {
-	align-items: center;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;	
+html {
+	font-size: 16px;
+}
+
+body {
+    background: #202322;
+	color: #e2e3ed;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1em;
+}
+
+a {
+	text-decoration: none;
+    color: #e2e3ed;
+}
+
+h1 {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 500;
+	font-size: 3em;
+	line-height: 1;
+	margin: 0;
+}
+
+h2 {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 500;
+	font-size: 1.875em;
+}
+
+h3 {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 500;
+	font-size: 1.125em;
+	margin: 20px 0;
+}
+
+p {
+	font-size : .875;
+	line-height: 1.285;
+}
+
+address {
+	font-style: normal;
 }
 
 .content-wrapper {
@@ -102,7 +139,15 @@ header, footer {
 	margin: 50px 0;
 }
 
-/************************** Header Styles **************************/
+/* -------------------- Base Header - Footer Styles -------------------- */
+
+header, footer {
+	align-items: center;
+	background-color: #202322;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;	
+}
 
 header {
 	padding: 15px 0;
@@ -138,16 +183,11 @@ header nav ul {
 }
 
 header nav ul li{
-	font-size: 1.3em;
+	font-size: 1.125em;
 	font-weight: 700;
 	list-style: none;
 	text-decoration: none;
 	text-transform: uppercase;
-}
-
-header nav ul li a {
-	text-decoration: none;
-    color: #e2e3ed;
 }
 
 footer {
@@ -176,37 +216,9 @@ footer .social-icons p {
 	justify-content: center;
 }
 
-footer address {
-	font-style: normal;
-}
-
 footer .copyright {
 	margin: 20px 0;
 }
-
-h1 {
-	font-family: 'Poppins', sans-serif;
-	font-weight: 500;
-	font-size: 2.5em;
-	margin-top: 50px;
-}
-
-h2 {
-	font-family: 'Poppins', sans-serif;
-	font-weight: 500;
-	font-size: 2.15em;
-}
-
-h3 {
-	font-family: 'Poppins', sans-serif;
-	font-weight: 500;
-	font-size: 1.3em;
-}
-
-p {
-	line-height: 1.3em;
-}
-
 
 
 /************************** Hero **************************/
@@ -226,12 +238,30 @@ aside {
 	justify-content: center;
 }
 
-.form {
-	margin: 20px 0 ;
+aside .form {
+	margin-top: 30px ;
 }
 
-.form-description {
-	
+input[type=text] {
+	box-sizing:border-box;
+    color: #2a423a;
+	font-style: italic;
+	padding: 1em;	
+	width: 100%;
+}
+
+input[type=button] {
+	background-color: #2a423a;
+	border: none;
+	color: #e2e3ed;
+	font-family: 'Poppins', Helvetica, Arial, sans-seerif;
+	font-size: 1.125em;
+	font-weight: 500;
+	margin-top: 20px;
+	padding: 20px 0;
+	text-align: center;
+	text-transform: uppercase;
+	width: 100%;
 }
 
 /************************** Features Content **************************/
@@ -281,7 +311,7 @@ aside {
 
 .reviews h3 {
 	margin: 20px 0;
-	width: 55%;
+	width: 80%;
 }
 
 
@@ -309,6 +339,7 @@ aside {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
+	margin-top: 0;
 }
 
 .contact-section address {
@@ -334,7 +365,7 @@ aside {
 	margin: 50px 0 0 0;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
 	flex-flow: row wrap;
 }
 
@@ -466,6 +497,8 @@ aside {
     }
 
 /* Hero Area */
+	
+	
 
 /* Aside */
     aside .content-wrapper {
@@ -553,15 +586,15 @@ aside {
         justify-content: space-between;
         align-items: flex-start;
     }
+	
+	.contact-content h3 {
+		font-size: 1.5em;
+	}
 		
 	
     /* ==========================================================================
      FAQ Page
      ========================================================================== */
-	
-    header {
-		padding: 15px 0;
-    }
 	
     .faq .content-wrapper {
         justify-content: space-between;
@@ -574,22 +607,38 @@ aside {
     .faq h2 {
         width: 100%
     }
+	
+	
+	.faq h3,
+	.faq p {
+		font-size: .875em;
+		line-height: 1.2;
+	
 }
 
 @media only screen and (min-width: 1200px) {
 /******************Desktop styles here/******************/
+	
+    header {
+		padding: 15px 0;
+    }
+	
     .content-wrapper {
         max-width: 960px;
 	}
 	
-	h1 {
-		font-size: 3em;
+    h2 {
+        font-size: 2.25em;
     }
-	h2 {
-		font-size: 2.15em;
+
+    h3,
+    h4 {
+        font-size: 1.875em;
     }
-	h3 {
-		font-size: 1.4em;
+
+    p {
+        font-size: 1.125em;
+        line-height: 1.333;
     }
 	
 	header nav {
@@ -608,7 +657,11 @@ aside {
 	
 	aside .content-wrapper .form-description,
 	aside .content-wrapper .form {
-		width: 35%;
+		width: 30%;
+	}
+	
+	aside h3{
+		margin-bottom:20px;
 	}
 	
 /* Feature */	
@@ -618,19 +671,20 @@ aside {
 	
 	.features article {
         flex-basis: 33%;
-    }
-	
-	.features-items {
-        align-items: baseline;	
-    }	
-	
-	p {
-		line-height: 1.7em;
-	}
-		
+    }		
+			
 /* Reviews */
+	
+	.revies h2 {
+		padding-bottom: 50px;
+	}
+	
 	.reviews article div {
 		width: 42%;
+	}
+	
+	footer h3 {
+		font-size: 1.875em;
 	}
 	
 /* ==========================================================================
@@ -639,7 +693,12 @@ aside {
 	
 	.mission h2,
 	.contact-section .content-wrapper h2 {
-		width: 95%
+		width: 95%;
+		font-size: 3em;
+	}
+	
+	.contact-content h4 {
+		font-size: 1.875em;
 	}
 	
 	
@@ -649,6 +708,13 @@ aside {
 	
 	.faq h2 {
 		width: 100%;
+		font-size: 3em;
+	}
+	
+	.faq h3,
+	.faq p {
+		font-size: 1.125em;
+		line-height: 1;
 	}
 	
     
