Added map iframe to about page

--- a/css/main.css
+++ b/css/main.css
@@ -373,6 +373,23 @@ input[type=button] {
 .contact-content p {
 	margin: 0;
 }
+
+.map figure {
+    height: 0;
+    padding-bottom: 125%;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+} 
+
+.map iframe {
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+    width: 100%;
+}
+
 /* ==================================================
                         FAQ PAGE
    ================================================== */
