--- a/css/main.css
+++ b/css/main.css
@@ -302,7 +302,6 @@ input[type=button] {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-	text-align: center;
 }
 
 .features h2 {
@@ -311,11 +310,18 @@ input[type=button] {
 
 .features p {
 	margin: 0;
+	text-align: center;
 }
 
 .features article {
 	margin: 30px 0;	
 	width: 63%;
+}
+
+.features i {
+	font-size: 3.75em;
+	margin-bottom: 40px;
+	width: 100%;
 }
 
 
@@ -567,9 +573,9 @@ input[type=button] {
 /* Features */
 
     .features article {
-        align-items: baseline;
+        align-items: center;
         display: flex;
-        flex-flow: row wrap;
+        flex-flow: column wrap;
         flex-basis: 50%;
         justify-content: center;	
     }
